# FastAPI-House-Price-Predictor

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
fuse_nishchal/: main.py
models/: california_housing_model.pkl  mlmodel.ipynb
tests/: test_data.py
