[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fuse_nishchal"
version = "0.0.1"
description = "this is simple ml(house price predictor) project focusing mainly on use of docker,FastAPI,12 factors principle"
authors = [
  { name = "Nishchal" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["fuse_nishchal"]
include = ["pyproject.toml", "fuse_nishchal/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fuse_nishchal"]
force-sort-within-sections = true

